@@ -1,1 +1,1 @@
-1.8.30.0-rc1
+1.8.30.0
