@@ -1,207 +1,0 @@
-                                Release Summary
-
-                             asterisk-1.8.30.0-rc1
-
-                                Date: 2014-08-11
-
-                           <asteriskteam@digium.com>
-
-     ----------------------------------------------------------------------
-
-                               Table of Contents
-
-    1. Summary
-    2. Contributors
-    3. Closed Issues
-    4. Other Changes
-    5. Diffstat
-
-     ----------------------------------------------------------------------
-
-                                    Summary
-
-                                 [Back to Top]
-
-   This release includes only bug fixes. The changes included were made only
-   to address problems that have been identified in this release series.
-   Users should be able to safely upgrade to this version if this release
-   series is already in use. Users considering upgrading from a previous
-   release series are strongly encouraged to review the UPGRADE.txt document
-   as well as the CHANGES document for information about upgrading to this
-   release series.
-
-   The data in this summary reflects changes that have been made since the
-   previous release, asterisk-1.8.29.0.
-
-     ----------------------------------------------------------------------
-
-                                  Contributors
-
-                                 [Back to Top]
-
-   This table lists the people who have submitted code, those that have
-   tested patches, as well as those that reported issues on the issue tracker
-   that were resolved in this release. For coders, the number is how many of
-   their patches (of any size) were committed into this release. For testers,
-   the number is the number of times their name was listed as assisting with
-   testing a patch. Finally, for reporters, the number is the number of
-   issues that they reported that were closed by commits that went into this
-   release.
-
-     Coders                   Testers                  Reporters              
-   2 coreyfarrell           1 Arnd Schmitter         1 arnd                   
-   2 rmudgett               1 George Joseph          1 coreyfarrell           
-   2 wdoekes                1 JoshE                  1 dennis.guse            
-   1 Elazar Broad           1 Rusty Newton           1 igorg                  
-   1 gtjoseph                                        1 mjordan                
-   1 jrose                                           1 rnewton                
-   1 kmoore                                          1 stephane.chazelas      
-   1 newtonr                
-   1 qwell                  
-
-     ----------------------------------------------------------------------
-
-                                 Closed Issues
-
-                                 [Back to Top]
-
-   This is a list of all issues from the issue tracker that were closed by
-   changes that went into this release.
-
-  Category: Addons/chan_ooh323
-
-   ASTERISK-23814: No call started after peer dialed
-   Revision: 419374
-   Reporter: igorg
-   Coders: qwell
-
-  Category: Channels/chan_sip/Subscriptions
-
-   ASTERISK-24087: [patch]chan_sip: sip_subscribe_mwi_destroy should not call
-   sip_destroy
-   Revision: 419440
-   Reporter: coreyfarrell
-   Coders: coreyfarrell
-
-  Category: Channels/chan_sip/TCP-TLS
-
-   ASTERISK-18345: [patch] sips connection dropped by asterisk with a large
-   INVITE
-   Revision: 420434
-   Reporter: stephane.chazelas
-   Coders: Elazar Broad
-
-  Category: Core/ManagerInterface
-
-   ASTERISK-21178: Improve documentation for manager command Getvar, Setvar
-   Revision: 419942
-   Reporter: rnewton
-   Testers: Rusty Newton
-   Coders: newtonr
-
-  Category: Documentation
-
-   ASTERISK-21178: Improve documentation for manager command Getvar, Setvar
-   Revision: 419942
-   Reporter: rnewton
-   Testers: Rusty Newton
-   Coders: newtonr
-
-  Category: Functions/func_uri
-
-   ASTERISK-23911: URIENCODE/URIDECODE: WARNING about passing an empty string
-   is a bit over zealous
-   Revision: 418641
-   Reporter: mjordan
-   Coders: jrose
-
-  Category: PBX/pbx_lua
-
-   ASTERISK-23818: PBX_Lua: after asterisk startup module is loaded, but
-   dialplan not available
-   Revision: 420146
-   Reporter: dennis.guse
-   Testers: George Joseph
-   Coders: gtjoseph
-
-  Category: Utilities/General
-
-   ASTERISK-23508: Memory Corruption in __ast_string_field_ptr_build_va
-   Revision: 420680
-   Reporter: arnd
-   Testers: Arnd Schmitter, JoshE
-   Coders: wdoekes
-
-     ----------------------------------------------------------------------
-
-                      Commits Not Associated with an Issue
-
-                                 [Back to Top]
-
-   This is a list of all changes that went into this release that did not
-   directly close an issue from the issue tracker. The commits may have been
-   marked as being related to an issue. If that is the case, the issue
-   numbers are listed here, as well.
-
-   +------------------------------------------------------------------------+
-   | Revision | Author       | Summary                         | Issues     |
-   |          |              |                                 | Referenced |
-   |----------+--------------+---------------------------------+------------|
-   |          |              | chan_dahdi/sig_pri: Fix type    |            |
-   | 418261   | rmudgett     | mismatch in the idledial        |            |
-   |          |              | feature's channel creation.     |            |
-   |----------+--------------+---------------------------------+------------|
-   |          |              | astobj2: work around REF_DEBUG  |            |
-   | 418504   | coreyfarrell | race which causes out of order  |            |
-   |          |              | log entries                     |            |
-   |----------+--------------+---------------------------------+------------|
-   | 419129   | kmoore       | Fix more dev-mode build issues  |            |
-   |----------+--------------+---------------------------------+------------|
-   |          |              | datastores: Audit               |            |
-   | 419684   | rmudgett     | ast_channel_datastore_remove    |            |
-   |          |              | usage.                          |            |
-   |----------+--------------+---------------------------------+------------|
-   | 420654   | wdoekes      | tcptls: Avoid compiler warning  |            |
-   |          |              | on non-dev-mode.                |            |
-   +------------------------------------------------------------------------+
-
-     ----------------------------------------------------------------------
-
-                                Diffstat Results
-
-                                 [Back to Top]
-
-   This is a summary of the changes to the source code that went into this
-   release that was generated using the diffstat utility.
-
- addons/chan_ooh323.c              |   26 -
- addons/ooh323c/src/decode.c       |    4
- addons/ooh323c/src/ooq931.c       |   12
- addons/ooh323c/src/printHandler.c |    2
- apps/app_meetme.c                 |    8
- apps/app_queue.c                  |    2
- apps/app_speech_utils.c           |   56 ++--
- apps/app_stack.c                  |  505 ++++++++++++++++++++++++++++++++------
- channels/chan_sip.c               |  186 +------------
- channels/sig_pri.c                |    8
- contrib/scripts/refcounter.py     |   17 -
- funcs/func_frame_trace.c          |    1
- funcs/func_uri.c                  |    8
- include/asterisk/app.h            |  161 +++++++++++-
- main/app.c                        |  128 +++++++++
- main/astobj2.c                    |   15 -
- main/features.c                   |    8
- main/manager.c                    |   19 -
- main/pbx.c                        |    5
- main/tcptls.c                     |    5
- main/utils.c                      |   17 +
- pbx/pbx_lua.c                     |    2
- tests/test_aoc.c                  |    2
- tests/test_astobj2.c              |    2
- tests/test_astobj2_thrash.c       |    2
- tests/test_event.c                |   18 -
- tests/test_hashtab_thrash.c       |    2
- tests/test_logger.c               |   24 -
- 28 files changed, 881 insertions(+), 364 deletions(-)
-
-     ----------------------------------------------------------------------
